Add Chinese AI providers support
Frontend:
- Add aliyun_bailian, siliconflow, zhipu, moonshot providers
- Add default base URLs for Chinese providers
- Update provider display names and documentation links

Backend:
- Add SILICONFLOW_MODELS static model list
- Add discover_siliconflow_models() function
- Add discover_aliyun_bailian_models() function
- Update PROVIDER_DISCOVERY_FUNCTIONS mapping
- Add test models for Chinese providers
- Update classify_model_type() for new providers

--- a/.qoder/repowiki/zh/content/前端架构/技能管理前端页面.md
+++ b/.qoder/repowiki/zh/content/前端架构/技能管理前端页面.md
@@ -3,8 +3,13 @@
 <cite>
 **本文档引用的文件**
 - [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx)
+- [frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx](file://frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx)
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts)
 - [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts)
 - [frontend/src/lib/api/client.ts](file://frontend/src/lib/api/client.ts)
+- [frontend/src/lib/api/query-client.ts](file://frontend/src/lib/api/query-client.ts)
+- [frontend/src/lib/hooks/use-notebooks.ts](file://frontend/src/lib/hooks/use-notebooks.ts)
+- [frontend/src/components/ui/badge.tsx](file://frontend/src/components/ui/badge.tsx)
 - [api/routers/skills.py](file://api/routers/skills.py)
 - [open_notebook/skills/base.py](file://open_notebook/skills/base.py)
 - [open_notebook/skills/registry.py](file://open_notebook/skills/registry.py)
@@ -12,10 +17,15 @@
 - [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py)
 - [open_notebook/skills/browser_base.py](file://open_notebook/skills/browser_base.py)
 - [open_notebook/skills/scheduler.py](file://open_notebook/skills/scheduler.py)
-- [frontend/src/components/ui/button.tsx](file://frontend/src/components/ui/button.tsx)
-- [frontend/src/components/common/LoadingSpinner.tsx](file://frontend/src/components/common/LoadingSpinner.tsx)
-- [frontend/src/lib/hooks/use-translation.ts](file://frontend/src/lib/hooks/use-translation.ts)
 </cite>
+
+## 更新摘要
+**所做更改**
+- 更新了前端架构分析，反映新的React组件架构实现
+- 新增了CreateSkillDialog对话框组件的详细分析
+- 更新了自定义Hook设计和状态管理模式
+- 增强了实时调度器状态监控功能的说明
+- 完善了批量操作和用户交互体验的描述
 
 ## 目录
 1. [简介](#简介)
@@ -32,48 +42,59 @@
 
 技能管理前端页面是 Open Notebook 项目中的一个核心功能模块，负责提供用户界面来管理和控制各种自动化技能（Skills）。这些技能可以自动执行内容爬取、处理和组织等任务，包括 RSS 内容爬虫、浏览器自动化、笔记总结和标签生成等功能。
 
+**更新** 新页面采用现代化的React组件架构，集成了CreateSkillDialog对话框，提供了更直观的技能创建和管理界面，支持实时调度器状态监控和批量操作。
+
 该页面提供了完整的技能生命周期管理，包括技能实例的创建、配置、执行、调度和删除，以及执行历史的查看和管理。
 
 ## 项目结构
 
-技能管理功能分布在前端和后端两个主要部分：
+技能管理功能分布在前端和后端两个主要部分，采用了现代化的React架构模式：
 
 ```mermaid
 graph TB
 subgraph "前端 (Frontend)"
-A[Skills Page 页面]
-B[API 客户端]
-C[UI 组件库]
-D[国际化 Hook]
+A[SkillsPage 主页面]
+B[CreateSkillDialog 对话框]
+C[自定义Hook集合]
+D[API 客户端]
+E[UI 组件库]
+F[状态管理]
 end
 subgraph "后端 (Backend)"
-E[技能路由]
-F[技能基类]
-G[技能注册表]
-H[具体技能实现]
-I[调度器]
+G[技能路由]
+H[技能基类]
+I[技能注册表]
+J[具体技能实现]
+K[调度器]
 end
 subgraph "数据库"
-J[技能实例表]
-K[执行历史表]
+L[技能实例表]
+M[执行历史表]
+N[调度状态表]
 end
 A --> B
-B --> E
-E --> F
-F --> G
+A --> C
+B --> C
+C --> D
+D --> G
 G --> H
 H --> I
 I --> J
-E --> K
+J --> K
+K --> L
+G --> M
+G --> N
 ```
 
 **图表来源**
-- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L1-L362)
-- [api/routers/skills.py](file://api/routers/skills.py#L1-L507)
+- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L1-L189)
+- [frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx](file://frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx#L1-L205)
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts#L1-L212)
 
 **章节来源**
-- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L1-L362)
-- [api/routers/skills.py](file://api/routers/skills.py#L1-L507)
+- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L1-L189)
+- [frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx](file://frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx#L1-L205)
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts#L1-L212)
 
 ## 核心组件
 
@@ -81,11 +102,21 @@ E --> K
 
 ### 前端核心组件
 
-1. **SkillsPage 组件** - 主要的技能管理界面
-2. **技能实例列表** - 显示所有已创建的技能实例
-3. **创建技能对话框** - 用于创建新的技能实例
-4. **技能状态徽章** - 显示技能的当前状态
-5. **执行按钮** - 手动触发技能执行
+1. **SkillsPage 组件** - 主要的技能管理界面，采用现代化React架构
+2. **CreateSkillDialog 对话框** - 集成的技能创建对话框，提供直观的配置界面
+3. **技能实例卡片** - 显示所有已创建的技能实例及其状态
+4. **技能状态徽章** - 基于技能类型的彩色状态标识
+5. **实时调度器状态面板** - 监控调度器运行状态
+6. **批量操作按钮组** - 支持执行、编辑、删除等批量操作
+
+### 自定义Hook系统
+
+1. **useSkillInstances** - 获取技能实例列表
+2. **useSkillTypes** - 获取可用技能类型
+3. **useCreateSkillInstance** - 创建新技能实例
+4. **useExecuteSkillInstance** - 执行技能实例
+5. **useSchedulerStatus** - 实时获取调度器状态
+6. **useDeleteSkillInstance** - 删除技能实例
 
 ### 后端核心组件
 
@@ -96,124 +127,234 @@ E --> K
 5. **调度器** - 管理定时执行任务
 
 **章节来源**
-- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L48-L171)
-- [api/routers/skills.py](file://api/routers/skills.py#L114-L295)
+- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L16-L189)
+- [frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx](file://frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx#L19-L205)
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts#L8-L212)
 
 ## 架构概览
 
-技能管理系统采用前后端分离的架构模式：
+技能管理系统采用现代化的前后端分离架构，结合React Query进行状态管理：
 
 ```mermaid
 sequenceDiagram
 participant U as 用户界面
-participant F as 前端应用
-participant A as API 客户端
-participant S as 技能路由器
-participant R as 技能注册表
+participant SP as SkillsPage
+participant CSD as CreateSkillDialog
+participant UQ as React Query
+participant API as SkillsAPI
+participant SR as 技能路由器
+participant REG as 技能注册表
 participant SK as 具体技能
 participant SCH as 调度器
-U->>F : 用户操作技能
-F->>A : 发送 API 请求
-A->>S : REST API 调用
-S->>R : 获取技能信息
-R-->>S : 返回技能元数据
-S->>SK : 创建技能实例
-SK-->>S : 返回技能结果
-S-->>A : 返回响应数据
-A-->>F : 更新界面状态
-F-->>U : 显示结果
-Note over SCH,S : 定时执行流程
+U->>SP : 用户操作技能
+SP->>UQ : 查询技能实例
+UQ->>API : 发送查询请求
+API->>SR : REST API 调用
+SR->>REG : 获取技能信息
+REG-->>SR : 返回技能元数据
+SR-->>API : 返回技能数据
+API-->>UQ : 返回响应数据
+UQ-->>SP : 更新界面状态
+SP->>CSD : 打开创建对话框
+CSD->>API : 创建技能实例
+API->>SR : POST /skills/instances
+SR->>SK : 创建技能实例
+SK-->>SR : 返回技能结果
+SR-->>API : 返回响应
+API-->>UQ : 更新缓存
+UQ-->>SP : 刷新技能列表
+Note over SCH,SK : 定时执行流程
 SCH->>SK : 触发定时执行
 SK-->>SCH : 返回执行结果
 ```
 
 **图表来源**
-- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L80-L163)
-- [api/routers/skills.py](file://api/routers/skills.py#L114-L357)
-- [open_notebook/skills/registry.py](file://open_notebook/skills/registry.py#L82-L98)
+- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L16-L189)
+- [frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx](file://frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx#L19-L205)
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts#L17-L28)
 
 ## 详细组件分析
 
 ### SkillsPage 组件分析
 
-SkillsPage 是技能管理的主要界面组件，实现了完整的 CRUD 操作：
+SkillsPage 是技能管理的主要界面组件，采用了现代化的React Hooks架构：
 
 ```mermaid
 classDiagram
 class SkillsPage {
++useState createDialogOpen
 +useState instances
-+useState availableSkills
 +useState schedulerStatus
-+useState loading
-+fetchData() void
-+handleCreateInstance() void
-+handleToggleEnabled() void
-+handleExecute() void
-+handleDelete() void
-+getStatusBadge() Badge
-+getSkillIcon() Icon
++useQuery instances
++useQuery schedulerStatus
++useMutation executeMutation
++useMutation deleteMutation
++handleExecute(id) void
++handleDelete(id) void
++getSkillTypeBadge(type) string
++render() JSX.Element
+}
+class CreateSkillDialog {
++useState formState
++useQuery skillTypes
++useQuery notebooks
++useMutation createMutation
++handleSubmit(e) void
++resetForm() void
++handleClose() void
 }
 class SkillsAPI {
-+listAvailable() Promise~SkillInfo[]~
++listTypes() Promise~SkillType[]~
 +listInstances() Promise~SkillInstance[]~
-+createInstance() Promise~SkillInstance~
-+updateInstance() Promise~SkillInstance~
-+deleteInstance() Promise~void~
-+executeInstance() Promise~ExecuteSkillResponse~
++createInstance(data) Promise~SkillInstance~
++executeInstance(id) Promise~ExecuteResponse~
 +getSchedulerStatus() Promise~SchedulerStatus~
 }
-class SkillInstance {
-+string id
-+string name
-+string skill_type
-+boolean enabled
-+object parameters
-+string schedule
-}
-class SchedulerStatus {
-+boolean running
-+number scheduled_jobs
-+array jobs
-}
+SkillsPage --> CreateSkillDialog : 包含
 SkillsPage --> SkillsAPI : 使用
-SkillsAPI --> SkillInstance : 返回
-SkillsAPI --> SchedulerStatus : 返回
 ```
 
 **图表来源**
-- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L48-L171)
-- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L80-L163)
+- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L16-L189)
+- [frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx](file://frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx#L19-L205)
 
-#### 技能状态管理
+#### 现代化状态管理模式
 
-组件使用 React 的状态管理来跟踪以下关键状态：
+组件使用React Query进行状态管理，实现了以下关键功能：
 
-| 状态变量 | 类型 | 描述 |
-|---------|------|------|
-| instances | SkillInstance[] | 当前用户的技能实例列表 |
-| availableSkills | SkillInfo[] | 可用的技能类型列表 |
-| schedulerStatus | SchedulerStatus | 调度器运行状态 |
-| loading | boolean | 数据加载状态 |
-| createDialogOpen | boolean | 创建对话框显示状态 |
+| 状态管理特性 | 实现方式 | 优势 |
+|-------------|----------|------|
+| 数据缓存 | React Query 缓存 | 减少网络请求，提升性能 |
+| 自动刷新 | 查询键失效机制 | 确保数据一致性 |
+| 错误处理 | 内置错误边界 | 提供更好的用户体验 |
+| 离线支持 | 缓存持久化 | 支持离线操作 |
+| 并发处理 | 查询去重 | 避免重复请求 |
 
 #### 技能状态徽章系统
 
 ```mermaid
 flowchart TD
-A[检查技能状态] --> B{enabled?}
-B --> |否| C[显示禁用徽章]
-B --> |是| D{有计划?}
-D --> |否| E[显示活动徽章]
-D --> |是| F{调度器中有任务?}
-F --> |是| G[显示计划中徽章]
-F --> |否| E
+A[根据技能类型选择颜色] --> B{rss_crawler}
+B --> |是| C[蓝色徽章]
+B --> |否| D{browser_crawler}
+D --> |是| E[紫色徽章]
+D --> |否| F{browser_task}
+F --> |是| G[靛青色徽章]
+F --> |否| H{note_summarizer}
+H --> |是| I[绿色徽章]
+H --> |否| J{note_tagger}
+J --> |是| K[黄色徽章]
+J --> |否| L[灰色默认徽章]
 ```
 
 **图表来源**
-- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L173-L199)
+- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L43-L53)
 
 **章节来源**
-- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L48-L171)
+- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L16-L189)
+
+### CreateSkillDialog 对话框分析
+
+CreateSkillDialog 是一个功能完整的技能创建对话框，提供了直观的配置界面：
+
+```mermaid
+classDiagram
+class CreateSkillDialog {
++useState name
++useState description
++useState skillType
++useState enabled
++useState schedule
++useState targetNotebookId
++useState parameters
++useQuery skillTypes
++useQuery notebooks
++useMutation createMutation
++handleSubmit(e) void
++resetForm() void
++handleClose() void
+}
+class FormFields {
++Input name
++Select skillType
++Textarea description
++Checkbox enabled
++Input schedule
++Select notebook
++Textarea parameters
+}
+class Validation {
++validateForm() boolean
++parseParameters() object
++showError(message) void
+}
+CreateSkillDialog --> FormFields : 包含
+CreateSkillDialog --> Validation : 使用
+```
+
+**图表来源**
+- [frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx](file://frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx#L19-L205)
+
+#### 对话框功能特性
+
+| 功能模块 | 实现细节 | 用户价值 |
+|---------|----------|----------|
+| 技能类型选择 | 下拉菜单 + 实时描述 | 帮助用户理解技能用途 |
+| 参数配置 | JSON编辑器 + 示例提示 | 支持复杂技能配置 |
+| 调度设置 | Cron表达式输入 + 示例 | 提供灵活的时间控制 |
+| 笔记本关联 | 可选目标笔记本 | 支持内容定向处理 |
+| 实时验证 | 表单字段验证 + 错误提示 | 提升表单可靠性 |
+
+**章节来源**
+- [frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx](file://frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx#L19-L205)
+
+### 自定义Hook系统分析
+
+自定义Hook系统提供了完整的技能管理功能：
+
+```mermaid
+classDiagram
+class UseSkillTypes {
++useQuery() Hook
++queryKey : ['skills', 'types']
++queryFn : skillsApi.listTypes()
+}
+class UseSkillInstances {
++useQuery() Hook
++queryKey : ['skills', 'instances']
++queryFn : skillsApi.listInstances()
+}
+class UseCreateSkillInstance {
++useMutation() Hook
++mutationFn : skillsApi.createInstance()
++onSuccess : invalidate instances cache
+}
+class UseSchedulerStatus {
++useQuery() Hook
++queryKey : ['skills', 'scheduler', 'status']
++queryFn : skillsApi.getSchedulerStatus()
++refetchInterval : 30000ms
+}
+UseSkillTypes --> SkillsAPI : 使用
+UseSkillInstances --> SkillsAPI : 使用
+UseCreateSkillInstance --> SkillsAPI : 使用
+UseSchedulerStatus --> SkillsAPI : 使用
+```
+
+**图表来源**
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts#L8-L212)
+
+#### Hook设计模式
+
+| Hook类型 | 功能特点 | 实现优势 |
+|---------|----------|----------|
+| 查询Hook | 数据获取 + 缓存管理 | 自动缓存 + 错误处理 |
+| 变更Hook | 状态更新 + 乐观更新 | 用户体验优化 |
+| 计算Hook | 数据转换 + 派生状态 | 性能优化 |
+| 组合Hook | 多个Hook组合使用 | 代码复用 |
+
+**章节来源**
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts#L1-L212)
 
 ### API 客户端分析
 
@@ -223,48 +364,49 @@ F --> |否| E
 classDiagram
 class APIClient {
 +axios axiosInstance
-+timeout number
-+interceptors RequestInterceptor
-+interceptors ResponseInterceptor
++timeout 600000ms
++interceptors 请求/响应拦截器
 +get(url, params) Promise
 +post(url, data) Promise
 +patch(url, data) Promise
 +delete(url) Promise
 }
 class SkillsAPI {
-+listAvailable() Promise~SkillInfo[]~
-+listInstances(params) Promise~SkillInstance[]~
-+getInstance(id) Promise~SkillInstance~
++listTypes() Promise~SkillType[]~
++listInstances() Promise~SkillInstance[]~
 +createInstance(data) Promise~SkillInstance~
-+updateInstance(id, data) Promise~SkillInstance~
-+deleteInstance(id) Promise~void~
-+executeInstance(id, data) Promise~ExecuteSkillResponse~
-+listExecutions(params) Promise~SkillExecution[]~
++executeInstance(id) Promise~ExecuteResponse~
 +getSchedulerStatus() Promise~SchedulerStatus~
++listExecutions() Promise~SkillExecution[]~
+}
+class QueryKeys {
++skillTypes : ['skills', 'types']
++skillInstances : ['skills', 'instances']
++skillInstance : (id) => ['skills', 'instances', id]
++schedulerStatus : ['skills', 'scheduler', 'status']
 }
 APIClient --> SkillsAPI : 提供基础功能
+SkillsAPI --> QueryKeys : 使用查询键
 ```
 
 **图表来源**
 - [frontend/src/lib/api/client.ts](file://frontend/src/lib/api/client.ts#L10-L66)
-- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L80-L163)
+- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L66-L145)
+- [frontend/src/lib/api/query-client.ts](file://frontend/src/lib/api/query-client.ts#L17-L42)
 
-#### API 端点映射
+#### API端点映射
 
 | 功能 | 前端函数 | 后端路由 | HTTP 方法 |
 |------|----------|----------|-----------|
-| 列出可用技能 | listAvailable | /skills/available | GET |
+| 列出技能类型 | listTypes | /skills/available | GET |
 | 列出技能实例 | listInstances | /skills/instances | GET |
-| 获取技能实例 | getInstance | /skills/instances/{id} | GET |
 | 创建技能实例 | createInstance | /skills/instances | POST |
-| 更新技能实例 | updateInstance | /skills/instances/{id} | PATCH |
-| 删除技能实例 | deleteInstance | /skills/instances/{id} | DELETE |
 | 执行技能实例 | executeInstance | /skills/instances/{id}/execute | POST |
-| 获取执行历史 | listExecutions | /skills/executions | GET |
 | 获取调度器状态 | getSchedulerStatus | /skills/scheduler/status | GET |
+| 列出执行历史 | listExecutions | /skills/executions | GET |
 
 **章节来源**
-- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L80-L163)
+- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L66-L145)
 - [api/routers/skills.py](file://api/routers/skills.py#L114-L463)
 
 ### 技能类型分析
@@ -282,16 +424,12 @@ class RssCrawlerSkill {
 +array feed_urls
 +integer max_entries
 +boolean deduplicate
-+_validate_config() void
-+_parse_feed(url) array
-+_create_source(entry) string
 +execute(context) SkillResult
 }
 class Skill {
 <<abstract>>
 +SkillConfig config
 +execute(context) SkillResult
-+run(context) SkillResult
 }
 RssCrawlerSkill --|> Skill : 继承
 ```
@@ -341,8 +479,6 @@ class NoteSummarizerSkill {
 +integer summary_length
 +string summary_style
 +boolean create_new_note
-+_build_prompt(content) string
-+_generate_summary(content) string
 +execute(context) SkillResult
 }
 class NoteTaggerSkill {
@@ -353,7 +489,6 @@ class NoteTaggerSkill {
 +string target_type
 +integer max_tags
 +array tag_categories
-+_generate_tags(content, title) array
 +execute(context) SkillResult
 }
 NoteSummarizerSkill --|> Skill : 继承
@@ -388,10 +523,14 @@ K --> M[记录执行结果]
 M --> N[更新数据库]
 O[手动执行] --> P[立即执行技能]
 P --> M
+Q[实时状态监控] --> R[每30秒刷新]
+R --> S[显示运行状态]
+S --> T[显示任务数量]
 ```
 
 **图表来源**
 - [open_notebook/skills/scheduler.py](file://open_notebook/skills/scheduler.py#L61-L179)
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts#L171-L177)
 
 #### 调度器状态管理
 
@@ -412,50 +551,67 @@ P --> M
 graph TB
 subgraph "表现层"
 A[SkillsPage 组件]
-B[UI 组件库]
-C[国际化系统]
+B[CreateSkillDialog 对话框]
+C[UI 组件库]
+D[Badge 徽章组件]
+E[Button 按钮组件]
+end
+subgraph "状态管理层"
+F[React Query]
+G[自定义Hook系统]
+H[查询键管理]
+I[缓存策略]
 end
 subgraph "业务逻辑层"
-D[SkillsAPI]
-E[技能路由器]
-F[技能注册表]
+J[SkillsAPI]
+K[技能路由器]
+L[技能注册表]
+M[技能类型定义]
+N[执行历史管理]
 end
 subgraph "领域模型层"
-G[技能基类]
-H[技能实例]
-I[执行历史]
+O[技能基类]
+P[技能实例]
+Q[执行结果]
+R[调度状态]
 end
 subgraph "基础设施层"
-J[调度器]
-K[数据库]
-L[AI 服务]
+S[调度器]
+T[数据库]
+U[AI 服务]
+V[HTTP 客户端]
 end
-A --> D
-D --> E
-E --> F
-F --> G
-G --> H
-G --> I
-H --> J
-I --> K
-G --> L
+A --> B
+A --> F
+B --> G
+F --> J
+J --> K
+K --> L
+L --> O
+O --> P
+O --> Q
+P --> S
+Q --> T
+O --> U
+J --> V
 ```
 
 **图表来源**
-- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L1-L50)
-- [api/routers/skills.py](file://api/routers/skills.py#L1-L50)
-- [open_notebook/skills/base.py](file://open_notebook/skills/base.py#L1-L50)
+- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L1-L189)
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts#L1-L212)
+- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L1-L145)
 
 ### 关键依赖关系
 
-1. **前端到后端的依赖**：SkillsPage 通过 SkillsAPI 依赖于后端技能路由器
-2. **后端到领域的依赖**：技能路由器依赖于技能注册表和技能基类
-3. **领域到基础设施的依赖**：技能实现依赖于调度器和数据库
-4. **UI 组件的依赖**：使用 Radix UI 和 Tailwind CSS 构建
+1. **组件到Hook的依赖**：SkillsPage 通过自定义Hook依赖于状态管理
+2. **Hook到API的依赖**：自定义Hook依赖于SkillsAPI进行数据操作
+3. **API到后端的依赖**：SkillsAPI依赖于技能路由器进行业务处理
+4. **UI组件的依赖**：使用Radix UI和Tailwind CSS构建
+5. **查询键到缓存的依赖**：查询键管理确保数据缓存一致性
 
 **章节来源**
-- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L1-L78)
-- [api/routers/skills.py](file://api/routers/skills.py#L15-L20)
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts#L1-L212)
+- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L1-L145)
 
 ## 性能考虑
 
@@ -463,24 +619,29 @@ G --> L
 
 ### 前端性能优化
 
-1. **异步数据加载**：使用 Promise.all 并行获取多个数据源
-2. **状态管理优化**：合理使用 React 状态钩子避免不必要的重渲染
-3. **组件懒加载**：大型组件按需加载减少初始包大小
-4. **缓存策略**：API 响应缓存减少重复请求
-
-### 后端性能优化
-
-1. **并发执行**：调度器支持多任务并发执行
-2. **资源池管理**：AI 服务连接池复用
-3. **数据库优化**：索引优化和查询缓存
-4. **内存管理**：及时释放不再使用的资源
+1. **React Query缓存策略**：5分钟缓存时间，10分钟垃圾回收
+2. **查询去重**：避免重复的API请求
+3. **乐观更新**：立即更新UI，等待后端确认
+4. **懒加载**：对话框按需加载
+5. **状态持久化**：本地状态缓存
 
 ### 网络性能优化
 
-1. **超时设置**：10 分钟超时适应长耗时操作
-2. **错误重试**：智能重试机制提高成功率
-3. **连接复用**：HTTP 连接池复用
-4. **压缩传输**：Gzip 压缩减少传输量
+1. **超时设置**：10分钟超时适应长耗时操作
+2. **重试机制**：查询重试2次，变更重试1次
+3. **连接复用**：Axios实例复用
+4. **压缩传输**：支持Gzip压缩
+
+### 实时监控优化
+
+1. **30秒轮询间隔**：平衡实时性和性能
+2. **条件刷新**：仅在页面可见时刷新
+3. **增量更新**：仅更新变化的数据
+
+**章节来源**
+- [frontend/src/lib/api/query-client.ts](file://frontend/src/lib/api/query-client.ts#L3-L15)
+- [frontend/src/lib/api/client.ts](file://frontend/src/lib/api/client.ts#L10-L16)
+- [frontend/src/lib/hooks/use-skills.ts](file://frontend/src/lib/hooks/use-skills.ts#L171-L177)
 
 ## 故障排除指南
 
@@ -528,31 +689,54 @@ G --> L
 **解决步骤**：
 1. 检查网络请求状态
 2. 使用浏览器开发者工具分析内存
-3. 检查 React 组件循环
+3. 检查React组件循环
 4. 优化状态更新逻辑
 
+#### 对话框功能异常
+
+**症状**：CreateSkillDialog 无法正常工作
+**可能原因**：
+1. 表单验证失败
+2. API调用错误
+3. 状态管理问题
+4. 权限不足
+
+**解决步骤**：
+1. 检查表单字段必填性
+2. 验证API响应格式
+3. 查看控制台错误日志
+4. 确认用户权限
+
 **章节来源**
-- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L74-L79)
-- [api/routers/skills.py](file://api/routers/skills.py#L313-L332)
+- [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L24-L41)
+- [frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx](file://frontend/src/app/(dashboard)/skills/components/CreateSkillDialog.tsx#L32-L51)
 
 ## 结论
 
-技能管理前端页面是一个功能完整、架构清晰的自动化技能管理界面。它成功地将复杂的后端技能系统抽象为直观易用的前端界面，为用户提供了强大的内容自动化能力。
+技能管理前端页面经过重构后，采用了现代化的React组件架构，提供了更加直观和高效的技能管理体验。新架构通过集成CreateSkillDialog对话框、自定义Hook系统和React Query状态管理，显著提升了用户体验和开发效率。
 
 ### 主要优势
 
-1. **完整的生命周期管理**：从创建到执行再到删除的全流程支持
-2. **灵活的配置选项**：支持多种技能类型和参数配置
-3. **强大的调度功能**：支持定时执行和手动执行
-4. **良好的用户体验**：直观的界面设计和实时状态反馈
-5. **可扩展性**：基于注册表的设计便于添加新技能类型
+1. **现代化架构**：采用React Hooks和React Query，代码结构清晰
+2. **直观界面**：CreateSkillDialog提供了一站式的技能创建体验
+3. **实时监控**：30秒自动刷新的调度器状态面板
+4. **状态管理**：完整的缓存、错误处理和乐观更新机制
+5. **可扩展性**：基于自定义Hook的设计便于功能扩展
 
 ### 技术亮点
 
-1. **前后端分离架构**：清晰的职责划分和接口定义
-2. **类型安全**：完整的 TypeScript 类型定义
-3. **异步处理**：现代化的异步编程模式
-4. **国际化支持**：完整的多语言支持
-5. **错误处理**：完善的错误处理和用户反馈机制
+1. **组件化设计**：SkillsPage和CreateSkillDialog职责明确
+2. **状态管理优化**：React Query提供完整的状态管理方案
+3. **错误处理完善**：统一的错误处理和用户反馈机制
+4. **性能优化**：缓存策略和查询去重提升性能
+5. **用户体验**：实时状态更新和流畅的交互体验
 
-该系统为内容管理和自动化处理提供了坚实的技术基础，是 Open Notebook 生态系统中的重要组成部分。
+### 未来改进方向
+
+1. **批量操作增强**：支持多选和批量执行技能
+2. **高级过滤**：按技能类型、状态等条件筛选
+3. **执行历史详情**：提供更详细的执行结果分析
+4. **调度器可视化**：提供图形化的任务调度界面
+5. **性能监控**：集成更详细的性能指标监控
+
+该系统为内容管理和自动化处理提供了坚实的技术基础，是Open Notebook生态系统中的重要组成部分，其现代化的架构设计为未来的功能扩展奠定了良好基础。
