--- a/.qoder/repowiki/zh/content/开发者指南/开发环境搭建.md
+++ b/.qoder/repowiki/zh/content/开发者指南/开发环境搭建.md
@@ -15,6 +15,10 @@
 - [supervisord.conf](file://supervisord.conf)
 - [supervisord.single.conf](file://supervisord.single.conf)
 - [scripts/wait-for-api.sh](file://scripts/wait-for-api.sh)
+- [scripts/resume.ps1](file://scripts/resume.ps1)
+- [scripts/install-deps.sh](file://scripts/install-deps.sh)
+- [scripts/export_docs.py](file://scripts/export_docs.py)
+- [scripts/README.md](file://scripts/README.md)
 - [frontend/package.json](file://frontend/package.json)
 - [frontend/start-server.js](file://frontend/start-server.js)
 - [frontend/next.config.ts](file://frontend/next.config.ts)
@@ -35,10 +39,11 @@
 
 ## 更新摘要
 **变更内容**
-- 新增技能系统相关文件的热重载支持配置
-- 更新开发专用 Compose 配置，增强热重载挂载范围
-- 补充技能系统完整架构说明
-- 增强开发者体验相关的配置细节
+- 新增PowerShell恢复脚本（resume.ps1），为Windows开发者提供一键恢复开发环境的便利工具
+- 新增开发工具文档，包含脚本使用说明和最佳实践
+- 补充技能系统依赖安装脚本（install-deps.sh）的说明
+- 增强文档导出工具（export_docs.py）的使用指南
+- 完善开发环境快速恢复和环境设置的完整工具链
 
 ## 目录
 1. [简介](#简介)
@@ -47,17 +52,18 @@
 4. [架构总览](#架构总览)
 5. [详细组件分析](#详细组件分析)
 6. [技能系统架构](#技能系统架构)
-7. [依赖分析](#依赖分析)
-8. [性能考虑](#性能考虑)
-9. [故障排查指南](#故障排查指南)
-10. [结论](#结论)
-11. [附录](#附录)
+7. [开发工具与脚本](#开发工具与脚本)
+8. [依赖分析](#依赖分析)
+9. [性能考虑](#性能考虑)
+10. [故障排查指南](#故障排查指南)
+11. [结论](#结论)
+12. [附录](#附录)
 
 ## 简介
-本指南面向开发者与运维人员，提供 Open Notebook 的完整开发环境搭建流程，涵盖系统要求、Python 与 Node.js 版本、依赖安装、Docker 与单容器部署、环境变量与数据库初始化、AI 提供商密钥配置、开发服务器启动与热重载、技能系统开发支持、以及常见问题排查与优化建议。
+本指南面向开发者与运维人员，提供 Open Notebook 的完整开发环境搭建流程，涵盖系统要求、Python 与 Node.js 版本、依赖安装、Docker 与单容器部署、环境变量与数据库初始化、AI 提供商密钥配置、开发服务器启动与热重载、技能系统开发支持、开发工具脚本使用、以及常见问题排查与优化建议。
 
 ## 项目结构
-Open Notebook 采用前后端分离架构：后端使用 FastAPI（Python），前端使用 Next.js（TypeScript/React）。数据库为 SurrealDB；通过 uv 打包与管理 Python 依赖；Docker 多阶段构建镜像；Supervisor 统一管理多个进程；开发时支持本地直启与 Docker Compose 双模式，特别针对技能系统提供完整的热重载支持。
+Open Notebook 采用前后端分离架构：后端使用 FastAPI（Python），前端使用 Next.js（TypeScript/React）。数据库为 SurrealDB；通过 uv 打包与管理 Python 依赖；Docker 多阶段构建镜像；Supervisor 统一管理多个进程；开发时支持本地直启与 Docker Compose 双模式，特别针对技能系统提供完整的热重载支持。新增的PowerShell恢复脚本为Windows开发者提供了一键恢复开发环境的便利工具。
 
 ```mermaid
 graph TB
@@ -65,6 +71,7 @@ subgraph "开发机"
 Dev["开发者"]
 Make["Makefile 命令"]
 Env[".env 环境变量"]
+PS["PowerShell 恢复脚本<br/>scripts/resume.ps1"]
 end
 subgraph "后端"
 API["FastAPI 应用<br/>api/main.py"]
@@ -72,6 +79,7 @@ Worker["surreal-commands 后台任务<br/>commands/*"]
 PyPkg["Python 依赖<br/>pyproject.toml"]
 SkillSystem["技能系统<br/>open_notebook/skills/*"]
 SkillDomain["技能领域模型<br/>open_notebook/domain/skill.py"]
+InstallDeps["依赖安装脚本<br/>scripts/install-deps.sh"]
 end
 subgraph "前端"
 Next["Next.js 应用<br/>frontend/*"]
@@ -85,11 +93,15 @@ subgraph "容器运行时"
 Sup["Supervisor 进程管理"]
 Img["Docker 镜像<br/>Dockerfile / Dockerfile.single"]
 DevCompose["开发专用 Compose<br/>docker-compose.dev.yml"]
+DocExport["文档导出工具<br/>scripts/export_docs.py"]
 end
 Dev --> Make
 Make --> API
 Make --> Worker
 Make --> Next
+PS --> DevCompose
+PS --> InstallDeps
+PS --> DocExport
 API --> DB
 API --> PyPkg
 API --> SkillSystem
@@ -108,10 +120,14 @@ DevCompose --> API
 DevCompose --> DB
 DevCompose --> SkillSystem
 DevCompose --> SkillDomain
+DocExport --> PS
 ```
 
 **图表来源**
 - [Makefile](file://Makefile#L156-L172)
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
+- [scripts/install-deps.sh](file://scripts/install-deps.sh#L1-L20)
+- [scripts/export_docs.py](file://scripts/export_docs.py#L1-L97)
 - [api/main.py](file://api/main.py#L1-L190)
 - [frontend/package.json](file://frontend/package.json#L1-L77)
 - [frontend/next.config.ts](file://frontend/next.config.ts#L1-L36)
@@ -127,6 +143,7 @@ DevCompose --> SkillDomain
 **章节来源**
 - [README.dev.md](file://README.dev.md#L355-L376)
 - [Makefile](file://Makefile#L1-L210)
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
 
 ## 核心组件
 - 后端 API（FastAPI）：负责路由注册、中间件、异常处理、数据库迁移与健康检查。
@@ -137,6 +154,8 @@ DevCompose --> SkillDomain
 - 开发工具链（uv、Makefile、脚本）：加速依赖安装、服务编排与发布。
 - 运行时配置系统：动态配置 API URL，支持开发环境灵活部署。
 - 技能系统：完整的自动化技能框架，支持热重载开发。
+- **PowerShell恢复脚本**：为Windows开发者提供一键恢复开发环境的便利工具。
+- **开发工具集合**：包含依赖安装、文档导出等实用脚本。
 
 **章节来源**
 - [api/main.py](file://api/main.py#L1-L190)
@@ -152,9 +171,10 @@ DevCompose --> SkillDomain
 - [supervisord.single.conf](file://supervisord.single.conf#L1-L52)
 - [open_notebook/domain/skill.py](file://open_notebook/domain/skill.py#L1-L159)
 - [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L32)
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
 
 ## 架构总览
-下图展示开发与生产两种典型部署形态：本地直启（开发机原生）与容器化（Docker + Supervisor），特别强调技能系统的热重载支持。
+下图展示开发与生产两种典型部署形态：本地直启（开发机原生）与容器化（Docker + Supervisor），特别强调技能系统的热重载支持和PowerShell恢复脚本的使用。
 
 ```mermaid
 graph TB
@@ -165,6 +185,7 @@ L3["Next.js 开发服务器<br/>热重载"]
 L4["SurrealDB 容器"]
 L5["运行时配置系统<br/>动态 API URL"]
 L6["技能系统热重载<br/>实时代码更新"]
+L7["PowerShell 恢复脚本<br/>一键恢复环境"]
 L1 --> L2
 L2 --> L5
 L2 --> L4
@@ -172,6 +193,10 @@ L2 --> L6
 L3 --> L2
 L3 --> L5
 L3 --> L6
+L7 --> L1
+L7 --> L2
+L7 --> L3
+L7 --> L4
 end
 subgraph "容器化生产/测试"
 C1["Docker 镜像"]
@@ -182,6 +207,7 @@ C5["前端静态服务"]
 C6["SurrealDB 进程"]
 C7["开发专用 Compose<br/>热重载支持"]
 C8["技能系统挂载<br/>open_notebook 目录"]
+C9["开发工具脚本<br/>install-deps.sh, export_docs.py"]
 C1 --> C2
 C2 --> C3
 C2 --> C4
@@ -191,6 +217,8 @@ C7 --> C3
 C7 --> C6
 C7 --> C8
 C8 --> L6
+C9 --> C3
+C9 --> C4
 end
 ```
 
@@ -205,6 +233,9 @@ end
 - [supervisord.conf](file://supervisord.conf#L7-L40)
 - [supervisord.single.conf](file://supervisord.single.conf#L7-L51)
 - [open_notebook/domain/skill.py](file://open_notebook/domain/skill.py#L1-L159)
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
+- [scripts/install-deps.sh](file://scripts/install-deps.sh#L1-L20)
+- [scripts/export_docs.py](file://scripts/export_docs.py#L1-L97)
 
 ## 详细组件分析
 
@@ -213,23 +244,27 @@ end
 - Node.js 版本：20.x LTS（用于前端构建与运行）
 - 包管理器：uv（Python 依赖同步）、npm（前端依赖安装）
 - 容器：Docker Desktop（可选，用于容器化部署）
+- **PowerShell（Windows开发者专用）**：用于运行恢复脚本和开发工具
 
 **章节来源**
 - [pyproject.toml](file://pyproject.toml#L14-L14)
 - [frontend/package.json](file://frontend/package.json#L1-L77)
 - [Dockerfile](file://Dockerfile#L14-L15)
 - [README.md](file://README.md#L99-L101)
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
 
 ### 依赖安装
 
 #### 后端 Python 依赖
 - 使用 uv 进行快速同步，冻结依赖以确保一致性。
 - 建议在虚拟环境中安装，避免系统级冲突。
+- **技能系统依赖**：通过 install-deps.sh 脚本自动安装 APScheduler、browser-use 等必需包。
 
 **章节来源**
 - [README.dev.md](file://README.dev.md#L16-L17)
 - [pyproject.toml](file://pyproject.toml#L1-L100)
 - [Dockerfile](file://Dockerfile#L33-L33)
+- [scripts/install-deps.sh](file://scripts/install-deps.sh#L1-L20)
 
 #### 前端 Node.js 依赖
 - 在 frontend 目录下使用 npm ci 安装锁定版本依赖。
@@ -322,7 +357,7 @@ end
 
 ### 进程管理与启动顺序
 - Supervisor 统一管理 API、Worker、前端与数据库进程。
-- 前端启动前通过 wait-for-api.sh 等待 API 健康检查接口可用。
+- 前端启动前通过 wait-for-api.sh 等等待 API 健康检查接口可用。
 - 支持 passenv 注入 API_URL/NEXT_PUBLIC_API_URL/INTERNAL_API_URL 等环境变量。
 
 **章节来源**
@@ -414,6 +449,115 @@ Open Notebook 的技能系统是一个完整的自动化技能框架，支持多
 - [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py#L1-L406)
 - [api/routers/skills.py](file://api/routers/skills.py#L1-L401)
 
+## 开发工具与脚本
+
+### PowerShell 恢复脚本（Windows 专用）
+
+**PowerShell 恢复脚本**是为 Windows 开发者提供的强大工具，能够一键检查和恢复 Open Notebook 开发环境的状态。
+
+#### 脚本功能特性
+- **Docker 状态检查**：自动验证 Docker Desktop 是否正常运行
+- **容器状态显示**：列出当前运行中的容器及其状态
+- **Git 状态检查**：显示工作区是否有未提交的更改
+- **服务端口检测**：检查关键端口（8502、5055、8000）的占用情况
+- **项目摘要显示**：提供技术栈、主要功能和访问地址的概览
+- **一键服务启动**：可选择自动启动 Docker 服务
+
+#### 使用方法
+```powershell
+# 进入项目目录
+cd 
+
+# 运行恢复脚本
+.\scripts\resume.ps1
+```
+
+#### 脚本输出示例
+脚本会显示详细的环境检查结果，包括：
+- Docker 状态（绿色勾号表示正常）
+- 当前运行的容器列表
+- Git 工作区状态
+- 服务端口占用情况
+- 项目技术栈摘要
+- 快速操作建议
+
+#### 自动化操作
+脚本结束后会提供以下快速操作建议：
+- 启动/停止/重启服务
+- 查看日志
+- 访问不同服务界面
+- 前端和后端开发命令
+
+**章节来源**
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
+
+### 依赖安装脚本
+
+**install-deps.sh** 脚本用于在容器启动时自动检查和安装技能系统所需的依赖包。
+
+#### 自动检测与安装
+- **APScheduler**：定时任务调度框架
+- **browser-use**：浏览器自动化功能
+- **tzlocal**：时区本地化支持
+
+#### 脚本执行逻辑
+```bash
+#!/bin/bash
+# 检查并安装技能系统依赖
+# 如果包未安装，则自动安装
+```
+
+**章节来源**
+- [scripts/install-deps.sh](file://scripts/install-deps.sh#L1-L20)
+
+### 文档导出工具
+
+**export_docs.py** 是一个强大的文档整理工具，能够将 docs/ 目录下的所有 Markdown 文件整合成便于分享和使用的格式。
+
+#### 工具功能
+- 扫描 docs/ 目录下的所有子文件夹
+- 合并每个子文件夹中的所有 .md 文件（排除 index.md）
+- 为每个子文件夹生成一个合并后的 Markdown 文件
+- 保存到 doc_exports/ 目录
+
+#### 输出格式特点
+- 每个导出文件都有主标题（文件夹名称）
+- 每个源文件都有单独的章节标题
+- 包含源文件归属信息
+- 完整保留原始内容
+- 使用视觉分隔符区分不同部分
+
+#### 使用方法
+```bash
+# 使用 Makefile（推荐）
+make export-docs
+
+# 或直接运行
+uv run python scripts/export_docs.py
+```
+
+**章节来源**
+- [scripts/export_docs.py](file://scripts/export_docs.py#L1-L97)
+- [scripts/README.md](file://scripts/README.md#L1-L76)
+
+### 开发工具最佳实践
+
+#### 脚本使用建议
+- **PowerShell 恢复脚本**：建议在每次开始开发前运行，确保环境状态正确
+- **依赖安装脚本**：在容器首次启动时自动执行，确保所有功能正常
+- **文档导出工具**：在需要与他人分享文档时使用，便于 ChatGPT 等平台处理
+
+#### 环境管理
+- 使用 PowerShell 恢复脚本快速检查环境状态
+- 定期运行文档导出工具整理开发文档
+- 确保技能系统依赖正确安装
+
+**章节来源**
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
+- [scripts/install-deps.sh](file://scripts/install-deps.sh#L1-L20)
+- [scripts/export_docs.py](file://scripts/export_docs.py#L1-L97)
+- [scripts/README.md](file://scripts/README.md#L1-L76)
+
 ## 依赖分析
 
 ```mermaid
@@ -436,6 +580,11 @@ L --> M
 L --> N
 O["运行时配置系统<br/>动态 API URL"] --> B
 O --> G
+P["PowerShell 恢复脚本<br/>scripts/resume.ps1"] --> K
+Q["依赖安装脚本<br/>scripts/install-deps.sh"] --> B
+R["文档导出工具<br/>scripts/export_docs.py"] --> S["doc_exports/"]
+P --> Q
+P --> R
 ```
 
 **图表来源**
@@ -449,6 +598,9 @@ O --> G
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
 - [supervisord.conf](file://supervisord.conf#L1-L41)
 - [supervisord.single.conf](file://supervisord.single.conf#L1-L52)
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
+- [scripts/install-deps.sh](file://scripts/install-deps.sh#L1-L20)
+- [scripts/export_docs.py](file://scripts/export_docs.py#L1-L97)
 
 **章节来源**
 - [pyproject.toml](file://pyproject.toml#L1-L100)
@@ -460,10 +612,13 @@ O --> G
 - 将数据库保持常驻，减少重复启动时间。
 - 仅在需要验证 Dockerfile 变更时使用本地 Docker 构建。
 - 清理缓存与无用镜像，降低资源占用。
+- **PowerShell 恢复脚本**：为 Windows 开发者提供快速环境检查和恢复能力，减少手动操作时间。
+- **开发工具自动化**：通过脚本自动处理依赖安装和文档整理，提高开发效率。
 
 **章节来源**
 - [README.dev.md](file://README.dev.md#L402-L422)
 - [docker-compose.dev.yml](file://docker-compose.dev.yml#L28-L33)
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
 
 ## 故障排查指南
 
@@ -498,6 +653,17 @@ O --> G
 - 验证环境变量 NEXT_PUBLIC_API_URL 设置。
 - 确认相对路径重写配置正确。
 
+### PowerShell 恢复脚本问题（Windows）
+- **Docker Desktop 未启动**：确保 Docker Desktop 正常运行
+- **权限问题**：以管理员权限运行 PowerShell
+- **脚本执行策略**：如遇执行限制，可临时调整执行策略
+- **网络连接**：确保网络连接正常，以便检查服务状态
+
+### 开发工具使用问题
+- **文档导出失败**：检查 docs/ 目录结构和文件权限
+- **依赖安装失败**：检查网络连接和 Python 环境
+- **脚本路径问题**：确保在正确的项目根目录下运行
+
 **章节来源**
 - [README.dev.md](file://README.dev.md#L299-L316)
 - [README.dev.md](file://README.dev.md#L318-L328)
@@ -509,9 +675,11 @@ O --> G
 - [docker-compose.dev.yml](file://docker-compose.dev.yml#L28-L33)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
 - [frontend/src/app/config/route.ts](file://frontend/src/app/config/route.ts#L28-L68)
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
+- [scripts/export_docs.py](file://scripts/export_docs.py#L1-L97)
 
 ## 结论
-通过本指南，您可以在本地或容器环境中快速搭建 Open Notebook 的开发与生产环境。建议日常开发采用本地直启，配合 Docker Compose 进行集成测试；生产部署可选用单容器镜像以简化运维。新增的开发专用 Compose 配置和运行时配置系统进一步提升了开发体验，特别是技能系统的热重载支持，显著改善了技能开发的迭代效率。
+通过本指南，您可以在本地或容器环境中快速搭建 Open Notebook 的开发与生产环境。建议日常开发采用本地直启，配合 Docker Compose 进行集成测试；生产部署可选用单容器镜像以简化运维。新增的开发专用 Compose 配置、运行时配置系统、PowerShell 恢复脚本和开发工具集合进一步提升了开发体验，特别是技能系统的热重载支持和 Windows 开发者的环境恢复能力，显著改善了技能开发和日常开发的迭代效率。
 
 ## 附录
 
@@ -528,12 +696,16 @@ O --> G
 - Docker 推送最新标签：make docker-push-latest
 - 开发环境启动：make dev
 - 全栈开发环境：make full
+- **PowerShell 恢复**：.\scripts\resume.ps1
+- **文档导出**：make export-docs
 
 **章节来源**
 - [README.dev.md](file://README.dev.md#L15-L81)
 - [Makefile](file://Makefile#L1-L210)
 - [Makefile](file://Makefile#L129-L133)
 - [Makefile](file://Makefile#L132-L133)
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
+- [scripts/README.md](file://scripts/README.md#L1-L76)
 
 ### 开发环境配置要点
 - **技能系统热重载**：通过卷挂载实现技能相关文件的实时更新
@@ -541,6 +713,9 @@ O --> G
 - 端口管理：8502（UI）、5055（API）、8000（数据库）
 - 环境隔离：开发专用 Compose 文件与生产配置分离
 - **技能系统模块**：open_notebook/skills/* 和 open_notebook/domain/skill.py 的完整支持
+- **PowerShell 恢复脚本**：Windows 开发者的环境恢复工具
+- **开发工具集合**：依赖安装、文档导出等自动化脚本
+- **自动化环境检查**：Docker 状态、Git 状态、服务端口检测
 
 **章节来源**
 - [docker-compose.dev.yml](file://docker-compose.dev.yml#L1-L34)
@@ -548,3 +723,6 @@ O --> G
 - [frontend/next.config.ts](file://frontend/next.config.ts#L1-L36)
 - [open_notebook/domain/skill.py](file://open_notebook/domain/skill.py#L1-L159)
 - [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L32)
+- [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
+- [scripts/install-deps.sh](file://scripts/install-deps.sh#L1-L20)
+- [scripts/export_docs.py](file://scripts/export_docs.py#L1-L97)
